src/test/ui/eval-enum.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/eval-enum.rs:12:15
   |
LL |     DivZero = 1/0,
   |               ^^^ attempt to divide by zero

error[E0080]: evaluation of constant value failed
  --> $DIR/eval-enum.rs:15:15
   |
LL |     RemZero = 1%0,
   |               ^^^ attempt to calculate the remainder with a divisor of zero

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
